plugins {
    id 'com.android.application'
    id 'com.google.gms.google-services'
}

android {
    namespace "cg.edukids"
    compileSdk 34

    defaultConfig {
        applicationId "cg.edukids"
        minSdk 21
        targetSdk 34
        versionCode 1
        versionName "1.0"

        //testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
    }

    sourceSets {
        main {
            java.srcDirs += 'src/main/java'
            res.srcDirs += 'src/main/res'
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    aaptOptions {
        cruncherEnabled = false
    }
}

configurations.all {
    resolutionStrategy {
        force 'org.jetbrains.kotlin:kotlin-stdlib:1.8.10'
        force 'org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.10'
        force 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.10'
    }
}

dependencies {

    implementation 'androidx.core:core-ktx:1.10.1'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'com.google.android.material:material:1.4.0'
    implementation 'com.android.support:multidex:1.0.0'
    implementation 'com.google.android.gms:play-services-mlkit-text-recognition-common:19.1.0'
    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:19.0.1'
    implementation 'com.google.mlkit:digital-ink-recognition:18.1.0'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'

    implementation 'com.google.firebase:firebase-database:20.0.3'
    implementation 'com.google.firebase:firebase-auth:21.0.3'
    implementation 'com.google.firebase:firebase-storage:11.0.4'

    implementation 'com.google.android.gms:play-services-auth:19.2.0'
    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
    implementation platform('com.google.firebase:firebase-bom:29.0.0')

    implementation 'androidx.recyclerview:recyclerview:1.0.0'
    implementation 'com.google.android.material:material:1.9.0'
    implementation 'com.thebluealliance:spectrum:0.7.1'
    implementation 'com.github.QuadFlask:colorpicker:0.0.13'
    implementation 'de.hdodenhof:circleimageview:3.0.0'
    implementation 'com.squareup.picasso:picasso:2.71828'

    //dexter permissions
    implementation "com.karumi:dexter:5.0.0"

    //Glide
    implementation 'com.github.bumptech.glide:glide:4.12.0'
    implementation 'com.github.bumptech.glide:annotations:4.7.1'
    implementation('com.github.bumptech.glide:okhttp3-integration:4.0.0') {
        exclude group: 'glide-parent'
    }
    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'

    implementation "com.vorlonsoft:androidrate:1.2.0"
    implementation 'com.github.yalantis:ucrop:2.2.2'


    //Butterknife
    implementation 'com.jakewharton:butterknife:10.2.3'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'

    implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'

    implementation platform('com.google.firebase:firebase-bom:32.1.1') // Utilizează BOM pentru versiunile Firebase
    implementation 'com.google.firebase:firebase-analytics' // Ex.: Analytics sau alt serviciu Firebase utilizat

}

// Adaugă această secțiune pentru a rezolva problema ButterKnife
tasks.withType(JavaCompile) {
    options.fork = true
    options.forkOptions.jvmArgs.addAll(['--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'])
}